variables.RunFour.scala.error
Compilation error:
RunFour:2: error: not found: value Baglle
while (Baglle!=4){
       ^